# cleval

./: README.md  pyproject.toml
src/: cleval.py
